--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,26 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutterfire_ui: ^0.2.0+2
+  beamer: ^1.0.0
+  flutter_bloc: ^8.0.0
+  freezed_annotation: ^1.1.0
+  json_annotation: ^4.3.0
+  json_serializable: ^6.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.10.5
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  dart_code_metrics: ^4.8.1
+  build_runner: ^2.1.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -45,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  freezed: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
