--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.5
   equatable: ^2.0.3
+  cloud_firestore: ^3.1.4
+  firebase_storage: ^10.2.3
 
 dev_dependencies:
   flutter_test:
