--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   freezed_annotation: ^1.1.0
   json_annotation: ^4.3.0
   json_serializable: ^6.0.0
+  uuid: ^3.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
